--- a/src/sass/global/_footer.scss
+++ b/src/sass/global/_footer.scss
@@ -175,6 +175,9 @@
 
       &__address {
         display: flex;
+        text-transform: uppercase;
+        font-size: 2vh;
+        margin-bottom: 0.2rem;
 
         @media screen and (max-width: $breakpoint-medium) {
           flex-direction: column;
@@ -246,7 +249,6 @@
   justify-content: flex-end;
   align-items: flex-end;
   color: $secondary;
-
   margin-right: 2rem;
   margin-bottom: 1.5rem;
 
