--- a/src/sass/global/navbar.scss
+++ b/src/sass/global/navbar.scss
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  text-transform: lowercase;
   @media only screen and (min-width: $breakpoint-largest) {
     display: flex;
     justify-content: flex-start;
